src/test/compile-fail/import-glob-rename.rs
// error-pattern:expecting

import baz = foo::*;

mod foo {
    fn bar() {}
}

fn main() {
}